# CubOS-Digital-Sim

./: .gitignore  AGENTS.md  README.md  pyproject.toml
examples/configs/board/: asmi_board.yaml  mock_mofcat_board.yaml  two_instrument_board.yaml
examples/configs/deck/: mofcat_deck.yaml  panda_deck.yaml  two_instrument_deck.yaml
examples/configs/gantry/: cubos.yaml  cubos_xl.yaml
examples/configs/protocol/: asmi_panda_deck_test.yaml  cubos_scan_test.yaml  move.yaml  panda_vial_holder_sweep.yaml  two_instrument_visualization_test.yaml
progress/: 2026-04-15.md  worker-summary.md
src/digital_twin/: __init__.py  __main__.py  cli.py  exporter.py
tests/: test_exporter.py  test_geometry.py  test_motion.py  test_motion_planning.py
viewer/: README.md  index.html  package-lock.json  package.json
viewer/public/examples/: asmi-panda-deck.json  cubos-move.json  cubos-scan-test.json  manifest.json  sterling-vial-scan.json  two-instrument-cubos-xl.json
viewer/src/: App.test.tsx  App.tsx  index.css  test-setup.ts  types.ts
viewer/src/lib/: playback.test.ts  playback.ts
